--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -302,6 +302,223 @@
     <p><b><img src="" alt=""></b></p>
     <p>1- The Cherubs: <b><img src="" alt=""></b></p>
     <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>2- The Seraphim: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>3- The Four Incorporeal Animals: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i>Ⲇ̅</i> = the number four in Coptic pronounced "ef-too" <b><img src="" alt=""></b></p>
+    <p><i>Ⲍⲱⲟⲛ</i> = pronounced "zo-oon" means "Animal" - <b><img src="" alt=""></b></p>
+    <p><i>Ⲁⲥⲱⲙⲁⲧⲟⲥ</i> = pronounced "asoma-tos" means with no material body = Incorporeal = <b><img src="" alt=""></b></p>
+    <p>4- The Thrones <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>[]</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>The Second Hierarchy of the Angelic Order</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- The Dominations: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>2- The Princedoms: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>3- The Virtues:</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>The Third Hierarchy of the Angelic Order</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- The Powers: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>2- The Archangels: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>3- The Angels: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>More about the Four Living Creatures</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- The First One Looks like a Lion: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>2- The Second One Looks like a Bull (or Bovine Face):</p>
+    <p><b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>3- The Third Looks like a Human: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The exact translation is the son of man. <b><img src="" alt=""></b></p>
+    <p>4- The Fourth Is like a Flying Eagle: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The 24 Heavenly Elders (Priests): <b><img src="" alt=""></b></p>
+    <p><i></i>:</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>meaning elders, priests <b><img src="" alt=""></b></p>
+    <p>The Church</p>
+    <p><b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Head of the Church's Body</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>The Lord Jesus Christ: <b><img src="" alt=""></b></p>
+    <p><i></i></p>
+    <p>The King: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Priest: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Lamb: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>Saint Mary</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>The Mother: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>John the Baptist</p>
+    <p><b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Twelve Disciples</p>
+    <p>The Twelve Apostles</p>
+    <p><b><img src="" alt=""></b></p>
+    <p><b><img src="" alt=""></b></p>
+    <p>Disciple: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>Apostle: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>1- Simon (Peter): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>2- Andrew: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>3- James the Son of Zebedee: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>4- John: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>5- Philip: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>6- Bartholomew: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>7- Thomas: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>8- Matthew (The Tax Collector): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>9- James (The Son of Alphaeus): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>10- Thaddaeus: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>11- Simon the Zealot: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>12- Judas Iscariot: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>13- Replacement of Judas Iscariot:</p>
+    <p>Matthias: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>Saint Mark: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Patriarchal Fathers: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Prophets: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Martyrs: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Upright: <b><img src="" alt=""></b></p>
+    <p>There is only one word in the English language that corresponds to the above two words, but there are corresponding words in both the Arabic and the Greek root names.</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Monks: <b><img src="" alt=""></b></p>
+    <p>This noun means the solitary monks of the highest ascendancy, and they were the most regimented.</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Confessors: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Floaters?: <b><img src="" alt=""></b></p>
+    <p>This is the closest translation I could find for those that have the greatest rank of spirituality; i.e., seeing things that are not seen or known by the regular human.</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>+++</p>
+    <p>The Three Orders of Priesthood: <b><img src="" alt=""></b></p>
+    <p>The Priesthood: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>1- The Episcopal Order: <b><img src="" alt=""></b></p>
+    <p>A- The Patriarch: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>B- The Metropolitan: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>C- The Bishop: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>+++</p>
+    <p>2- The Priestly Order: <b><img src="" alt=""></b></p>
+    <p>A- The Assistant Bishop: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>B- Hegemon: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>C- The Priest: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>+++</p>
+    <p>3- The Deaconship: <b><img src="" alt=""></b></p>
+    <p>A- The Archdeacon: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>B- The Deacon: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>C- The Assistant Deacon: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>+++</p>
+    <p>The Monks: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>Other Church Positions, Not Counted among the Ranks</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- The Prefect: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>2- The Eghnostos (The Reader): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>3- The Psaltor: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>4- The People: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Church Building</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>The Sanctuary: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Altar: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Bread (The Korban): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Lamb: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><img src="" alt=""></p>
+    <p>The Body (Here Refers to the Body of Christ): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Paten: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Dome: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Handkerchief (author's translation): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Cruets: <b><img src="" alt=""></b></p>
+    <p>The Chalice: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><img src="" alt=""></p>
+    <p>The Spoon: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Wine: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Water: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Blood: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Ark: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>means the throne: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>means the ark: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>means the receptacle of the mana: <b><img src="" alt=""></b></p>
+    <p>The Ciborium (The Pyx): <b><img src="" alt=""></b></p>
+    <p>The Liturgical Fans: <b><img src="" alt=""></b></p>
+    <p><img src="" alt=""></p>
+    <p>The Censer: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
 </div>
 <div id="after">
   <h2 class="half">After:</h2>
