--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -519,6 +519,144 @@
     <p><img src="" alt=""></p>
     <p>The Censer: <b><img src="" alt=""></b></p>
     <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>Box of Incense: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Incense: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Altar Board: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><img src="" alt=""></p>
+    <p>The Ciborium (The Canopy): <b><img src="" alt=""></b></p>
+    <p>The Candles: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><img src="" alt=""></p>
+    <p>The Tribune: <b><img src="" alt=""></b></p>
+    <p>The Niche: <b><img src="" alt=""></b></p>
+    <p>The Iconostasis: <b><img src="" alt=""></b></p>
+    <p>The Royal Door: <b><img src="" alt=""></b></p>
+    <p>The Drape: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>Icon Sequence South of the Royal Door</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- The Icon of the Lord Holding the Bible with the Verse “I am the Good Shepherd.”</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>2- The Icon of John the Baptist: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>3- The Icon of the Saint of the Church (Representing the Saint that the Church Was Named After): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>4- Icons of Some of the Martyrs: <b><img src="" alt=""></b></p>
+    <p>5- Icons from the Old and the New Testament: <b><img src="" alt=""></b></p>
+    <p>To the North of the Royal Door</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- The Icon of the Holy Virgin Mary (Theotokos): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>2- The Icon of the Annunciation: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>3- The Icon of the Archangel Michael: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>4- The Icon of Saint Mark, the Apostle: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>5- Sometimes, the Icons of Some of the Apostles: <b><img src="" alt=""></b></p>
+    <p>On Top of the Royal Door</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>The Icon of the Last Supper: <b><img src="" alt=""></b></p>
+    <p>To the Right and Left of the Above Icon</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>Icons of the Twelve Apostles: <b><img src="" alt=""></b></p>
+    <p>On Top of the Iconostasis There Is the Cross</p>
+    <p><b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>On Both Sides of the Cross Stand the Virgin Mary and Saint John Looking Up to the Crucified Lord:</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>The Lamp: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>Placed in front of each Icon, with the exception of the Icon of the Lord, for He is the Light.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>The Ostrich Eggs: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i>ⲥⲱⲟⲩϩⲓ</i> = egg</p>
+    <p><i>ⲙⲁⲙⲣⲉϩ</i> = ostriches</p>
+    <p>The Nave of the Church: <b><img src="" alt=""></b></p>
+    <p>There Are 2 Divisions to the Nave: <b><img src="" alt=""></b></p>
+    <p>1- The Chancel or the Deacons' Choir: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>P.S.</p>
+    <p>1- Khoros means row</p>
+    <p>2- The Chancel is one to three steps higher than the rest of the nave and is right west to the Iconostasis.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>3. The contents of the Chancel: <b><img src="" alt=""></b></p>
+    <p>a) Seats for the Deacons: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>b) Two Lecterns: <b><img src="" alt=""></b></p>
+    <p><i></i></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>2. The Nave Proper: <b><img src="" alt=""></b></p>
+    <p>A- It is divided into two parts by a Colonnade: The southern part is for all the female believers and the northern part is for the male believers.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>B- The Columns: <b><img src="" alt=""></b></p>
+    <p>These are twelve in number and represent the twelve disciples.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>C- The Ambon: <b><img src="" alt=""></b></p>
+    <p><i>Ⲕⲁⲑⲉⲇⲣⲁ</i></p>
+    <p>The Narthex and the Baptistry: <b><img src="" alt=""></b></p>
+    <p>The Baptistry: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Church's Tower (Belfry): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Religious Dress: <b><img src="" alt=""></b></p>
+    <p>The White Color: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Seven Liturgical Vestments: <b><img src="" alt=""></b></p>
+    <p>1- The Tunic (The Garment - The Alb): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>2- The Deacon's Stole: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>3- The Priestly's Stole: <b><img src="" alt=""></b></p>
+    <p>?</p>
+    <p>4- The Girdle (Cincture): <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>5- The Sleeves: <b><img src="" alt=""></b></p>
+    <p>6- ? Helmet: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>7- The Pallum: <b><img src="" alt=""></b></p>
+    <p>8- The Cope: <b><img src="" alt=""></b></p>
+    <p>9- The Crown: <b><img src="" alt=""></b></p>
+    <p><i></i></p>
+    <p><img src="" alt=""></p>
+    <p><img src="" alt=""></p>
+    <p>Exercises</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>Exercise One: <b><img src="" alt=""></b></p>
+    <p>Read each question thoroughly, then record what you think is the best answer. Compare it with the key of answers.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- The word "angel" means one or more of the following. You can give more than one answer, if you think it is proper:</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>a) a kind being <b><img src="" alt=""></b></p>
+    <p>b) a very wise being <b><img src="" alt=""></b></p>
+    <p>c) a messenger <b><img src="" alt=""></b></p>
+    <p>d) a bringer of tidings <b><img src="" alt=""></b></p>
+    <p>e) a guardian of the innocent and just <b><img src="" alt=""></b></p>
+    <p>Answer: c), d), e)</p>
+    <p>2- The conventional way of pronouncing "angel" in Coptic is "an-gelos".</p>
+    <p>Which one of the following Coptic words matches with this pronunciation?</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>a) <i>ⲁⲛϫⲉⲗⲟⲥ</i></p>
+    <p>b) <i>ⲁⲛⲅⲉⲗⲟⲥ</i></p>
+    <p>c) <i>ⲁⲅⲅⲉⲗⲟⲥ</i></p>
+    <p>d) <i>ⲁⲛⲕⲉⲗⲁⲥ</i></p>
+    <p>Answer: c)</p>
+    <p>The Coptic Icons have a very special meaning; the Icon of Our Lord that you see at the entry to the sanctuary has a special name and it carries the following characteristics:</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>a) The Lord is holding a book in his left hand, and two letters of the Greek alphabet are written on it in some of the drawings, and not necessarily in all the Coptic Icons.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>b) The right hand is in a position of the </p>
 </div>
 <div id="after">
   <h2 class="half">After:</h2>
