--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -656,7 +656,43 @@
     <p><b><img src="" alt=""></b></p>
     <p>a) The Lord is holding a book in his left hand, and two letters of the Greek alphabet are written on it in some of the drawings, and not necessarily in all the Coptic Icons.</p>
     <p><b><img src="" alt=""></b></p>
-    <p>b) The right hand is in a position of the </p>
+    <p>b) The right hand is in a position of the "Coptic" benediction: Here, the thumb of this hand touches the fourth finger (the ring finger), and the number of bones is ten phalangeal (finger) bones. This refers to the tenth letter of the Coptic alphabet, which is the first letter of the name "Jesus" in Coptic.</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>Answer the following questions: <b><img src="" alt=""></b></p>
+    <p>1- The tenth letter of the Coptic alphabet, which starts the name "Jesus", in the Coptic language is:</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>a) <i>ⲩ</i></p>
+    <p>b) <i>ⲉ</i></p>
+    <p>c) <i>ⲓ</i></p>
+    <p>d) <i>ⲏ</i></p>
+    <p>Answer: c)</p>
+    <p><img src="" alt=""></p>
+    <p>2- The two letters are the first and the last letters of the Greek alphabet, indicating that the Lord is the beginning and the end. These letters are:</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>a) <i>ⲁ</i> &amp; <i>ϯ</i></p>
+    <p>b) <i>ⲁ</i> &amp; <i>ϣ</i></p>
+    <p>c) <i>ⲁ</i> &amp; <i>ⲱ</i></p>
+    <p>d) <i>ⲱ</i> &amp; <i>ⲉ</i></p>
+    <p>Answer: c)</p>
+    <p>3- This Icon will show the Lord seated on the throne most of the time, although sometimes not. The Lord here in this Icon is shown as:</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>a) <i></i> [The Lord <b><img src="" alt=""></b>]</p>
+    <p>b) <i></i> [The God <b><img src="" alt=""></b>]</p>
+    <p>c) <i></i> [The Master <b><img src="" alt=""></b>]</p>
+    <p>d) <i></i> [The Almighty - <b><img src="" alt=""></b>]</p>
+    <p>Answer: d)</p>
+    <p>4- Which of the following choirs of angels have the following attributes?</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>a) Their Hebraic meaning is "the fiery ones." <b><img src="" alt=""></b></p>
+    <p>b) They stand around the Throne of the "Almighty" One in perpetual Love, Fear, and Adoration. <b><img src="" alt=""></b></p>
+    <p>c) They have six wings (Isaiah 740–701 B.C.): with 2 wings they cover their eyes; with another 2 their legs; and with the last 2 they fly. <b><img src="" alt=""></b></p>
+    <p>d) In Isaiah's vision, they shout these words to each other: “Holy, holy, holy is Yahweh Sabaoth. His glory fills the whole earth.” <b><img src="" alt=""></b></p>
+    <p>Those special angels that share this incessant prayer with the other angelic hosts around God's throne are:</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>a) <i>ⲛⲓ-Ⲭⲉⲣⲟⲃⲓⲙ</i></p>
+    <p>b) <i>ⲛⲓ-Ⲥⲉⲣⲁⲫⲓⲙ</i></p>
+    <p>c) <i>ⲛⲓ-ⲉⲍⲟⲩⲥⲓⲁ</i></p>
+    <p>Answer: b)</p>
 </div>
 <div id="after">
   <h2 class="half">After:</h2>
