--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -693,6 +693,31 @@
     <p>b) <i>ⲛⲓ-Ⲥⲉⲣⲁⲫⲓⲙ</i></p>
     <p>c) <i>ⲛⲓ-ⲉⲍⲟⲩⲥⲓⲁ</i></p>
     <p>Answer: b)</p>
+    <p>5- Now you know the above answer. What is the other angelic choir that fulfills the following?</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- The name is of Hebraic origin. <b><img src="" alt=""></b></p>
+    <p>2- They represent Divine wisdom. <b><img src="" alt=""></b></p>
+    <p>3- They and the Seraphims are the closest to God's throne and surround it at all times. <b><img src="" alt=""></b></p>
+    <p>4- They were assigned to guard Eden, when both Adam and Eve were evicted. <b><img src="" alt=""></b></p>
+    <p>5- Their statues were assigned on both sides of the Ark of the Covenant, symbolizing a guardian role. <b><img src="" alt=""></b></p>
+    <p>6- In the Divine Liturgy, they are always referred to as “full of eyes”. <b><img src="" alt=""></b></p>
+    <p>7- Most authorities assume that they are the carriers of God's chariot. <b><img src="" alt=""></b></p>
+    <p>a) <i>ⲛⲓ-Ⲥⲉⲣⲁⲫⲓⲙ</i></p>
+    <p>b) <i>ⲛⲓ-Ϫⲟⲙ</i></p>
+    <p>c) <i>ⲛⲓ-Ⲙⲉⲧϭⲟⲓⲥ</i></p>
+    <p>c) <i>ⲛⲓ-Ⲭⲉⲣⲟⲃⲓⲙ</i></p>
+    <p>Answer: d)</p>
+    <p>6- Who is the angel (or archangel) that:</p>
+    <p>a) Made the Annunciation to the Holy Virgin Mary?</p>
+    <p>b) Informed the priest Zacharias of his wife's pregnancy with John the Baptist?</p>
+    <p><b><img src="" alt=""></b></p>
+    <p>a) <i>Ⲙⲓⲭⲁⲓⲏⲗ</i></p>
+    <p>b) <i>Ⲁⲛⲁⲛⲓⲏⲗ</i></p>
+    <p>c) <i>Ⲅⲁⲃⲣⲓⲏⲗ</i></p>
+    <p>Answer: c)</p>
+    <p>7- In this question, you need to identify the name of the following rank of angels: <b><img src="" alt=""></b></p>
+    <p>Read the following paragraph, then answer the question: <b><img src="" alt=""></b></p>
+    
 </div>
 <div id="after">
   <h2 class="half">After:</h2>
