--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -34,6 +34,12 @@
 			<p>
 				Depuis Kircher, les principales grammaires publiées sont celles de Tuki, de Peyron, de Schwartze, de Stem et de Steindorff. Les deux premières écrites en latin ont rendu des services en leur temps; elles ont été dépassées de beaucoup par les autres, composées toutes trois en allemand. Celle de Schwartze en 1850 marque déjà un progrès considérable; mais c'est Stern qui en 1880 pénètre et dévoile les secrets de la langue copte. Le premier, il a le mérite d'établir les vrais principes et de poser les règles fondamentales de la grammaire avec une abondance de témoignages qui en garantit l'exactitude et en assure l'autorité. Stern étudie les deux dialectes ṣaꜥìdique et boḥairique, Steindorff en 1894 s'attache surtout au ṣaꜥìdique. Sa grammaire, faite pour les écoles, suit une méthode plus classique et plus à la portée des commençants; elle pose les bases d'une partie nouvelle, la phonétique copte, et cherche à rattacher, autant que possible, la langue <i>fille</i> à la langue <i>mère</i>, c.-à-d. le copte à l'égyptien proprement dit. De cette comparaison toute naturelle, jaillissent des lumières qui éclairent les deux langues à la fois et permettent d'établir pour le copte des divisions plus logiques et plus conformes aux racines. La seconde édition, parue en mars 1904, se distingue de la première par une disposition plus claire des matières et par quelques additions et améliorations.
 			</p>
+			<p>
+				La présente grammaire est la première qui paraisse en langue française, elle a pour objet direct le dialecte boḥairique et ne donne de l'égyptien que ce qui est indispensable pour l'intelligence du copte; car elle s'adresse au débutant et ne suppose aucune connaissance préalable de l'une ni de l'autre langue. Elle vise avant tout à faciliter le travail de l'étudiant au moyen de tableaux synoptiques et d'une méthode claire et commode. La plupart des exemples sont pris de l'Écriture Sainte et en particulier du Pentateuque (édition <i>P. de Lagarde</i>). J'en ai tiré aussi des publications de MM. Francesco Rossi et Ignazio Guidi qui ont eu l'extrême obligeance de me les envoyer eux-mêmes; qu'il me soit permis de leur en témoigner ici toute ma gratitude. J'adresse aussi mes remerciements à M. Maspero qui a bien voulu me prêter le secours précieux de ses conseils et à M. Pierre Lacau qui a eu la bonté de revoir mon manuscrit et de m'aider de ses lumières.
+			</p>
+			<p>
+				Beyrouth, 27 Octobre 1904.
+			</p>
 		</div>
 	</body>
 </html>
