--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -40,6 +40,196 @@
 			<p>
 				Beyrouth, 27 Octobre 1904.
 			</p>
+			<p>
+				Cette seconde édition est sensiblement la même que la première. Elle a bénéficié des corrections que des savants compétents ont bien voulu m'indiquer. Pour éviter la confusion entre les dialectes, tout ce qui concerne le ṣaꜥìdique a été mis à part et réuni dans un court abrégé de la morphologie. Le but de cet abrégé est surtout d'offrir un point de comparaison entre les deux dialectes; il peut aussi servir d'initiation à l'étude de la langue du Sud. Il va sans dire que cette étude devra se compléter dans l'excellente grammaire copte de Steindorff (deuxième édition), tout entière consacrée au ṣaꜥìdique.
+			</p>
+			<p>
+				Le moyen le plus pratique pour utiliser la présente grammaire est de commencer par la morphologie, de se familiariser avec les paradigmes en traduisant les premiers morceaux de la chrestomathie, puis de reprendre et d'approfondir la syntaxe des différentes parties. Logiquement, la phonétique se place au début; pratiquement, elle n'est abordable d'une manière utile que lorsqu'on a déjà une certaine connaissance de la langue. Elle vient alors à point pour synthétiser des notions éparses, généraliser les règles, mettre de l'ordre et de l'unité dans toute la grammaire.
+			</p>
+			<p>
+				La chrestomathie a été augmentée d'un passage de l'Exode. J'ai gardé le texte du manuscrit de Paris en donnant en note les variantes de celui de Rome. Je dois la connaissance de ces variantes à l'obligeance de M. J. Guidi qui s'est imposé le pénible travail de collationner ma copie avec le texte de la Bibliothèque Vaticane. Qu'il veuille bien accepter la sincère expression de ma gratitude.
+			</p>
+			<p>
+				La bibliographie a été revue avec soin et considérablement augmentée. La division par dialectes n'a été maintenue que pour l'Écriture Sainte. Dans les autres matières elle est moins importante. Au reste, pour toutes les grandes publications, l'indication du dialecte se trouve dans le titre même, si non elle a été faite au moyen des abréviations ordinaires.
+			</p>
+			<p>
+				Qu'il me soit permis ici d'adresser mes remerciements, pour les précieux ouvrages qu'ils m'ont envoyés, à MM. Ernst Anderson, W. E. Crum, H. Guérin, Jos. Heyes, H. Hyvernat, O. von Lemm, F. Nau, Seymour de Ricci, E. O. Winstedt.
+			</p>
+			<p>
+				Je dois une reconnaissance toute spéciale à M. Marius Chaine, s. j. et à M. Edmond Ley, s. j. qui m'ont rendu le grand service de m'aider à corriger les épreuves.
+			</p>
+			<p>
+				Ore place, Hastings,
+				<br>
+				10 Avril 1907.
+			</p>
+			<p>
+				 Alexis Mallon s. j.
+			</p>
+			<hr>
+			<h2>Table des matières.</h2>
+			<p>Pages</p>
+			<p>Grammaire.</p>
+			<p>Introduction: la langue copte.</p>
+			<ol>
+				<li>Phonétique <span>7–23</span>
+					<ol>
+						<li>Alphabet. <span>7</span></li>
+						<li>Valeur et prononciation des lettres. <span>8–11</span>
+							<ol>
+								<li>Consonnes. <span>8</span></li>
+								<li>Voyelles et diphtongues. <span>10</span></li>
+							</ol>
+						</li>
+						<li>Des syllabes. <span>11–16</span>
+							<ol>
+								<li>Des syllabes en elles-mêmes. <span>12</span></li>
+								<li>Des syllabes dans les mots. <span>12</span></li>
+								<li>Nature et quantité de la voyelle formative et des voyelles auxiliaires. <span>14</span>
+									<ol>
+										<li>Voyelle formative. <span>14</span></li>
+										<li>Voyelles auxiliaires. <span>15</span></li>
+									</ol>
+								</li>
+							</ol>
+						</li>
+						<li>Changements de lettres. <span>16–20</span>
+							<ol>
+								<li>Consonnes. <span>16–18</span>
+									<ol>
+										<li>Chute de consonnes finales. <span>16</span></li>
+										<li>Changements de consonnes. <span>17</span></li>
+									</ol>
+								</li>
+								<li>Voyelles. <span>18–20</span>
+									<ol>
+										<li>Sous l'influence d'une consonne qui précède. <span>18</span></li>
+										<li>Sous l'influence d'une lettre qui suit. <span>19</span></li>
+									</ol>
+								</li>
+							</ol>
+						</li>
+						<li>Des trois états et des trois formes. <span>20–22</span>
+							<ol>
+								<li>Définitions. <span>20</span></li>
+								<li>Importance. <span>21</span></li>
+							</ol>
+						</li>
+						<li>Abréviations usuelles. <span>22–23</span></li>
+					</ol>
+				</li>
+				<li>Morphologie et syntaxe.
+					<ol>
+						<li><i>Articles et pronoms.</i>
+							<ul>
+								<li>Chap. I. De l'article. <span>24–30</span>
+									<ol>
+										<li>Formes. <span>24–26</span>
+											<ol>
+												<li>Article défini. <span>24</span></li>
+												<li>Article indéfini. <span>25</span></li>
+											</ol>
+										</li>
+										<li>Syntaxe de l'article. <span>26–29</span>
+											<ol>
+												<li>Emploi de l'article. <span>26</span></li>
+												<li>Suppression de l'article. <span>28</span></li>
+											</ol>
+										</li>
+									</ol>
+								</li>
+								<li>Chap. II. Pronoms personnels. <span>30–36</span>
+									<ol>
+										<li>Pronoms affixes. <span>30</span></li>
+										<li>Pronoms absolus. <span>31</span></li>
+										<li>Génitif et accusatif du pronom personnel. <span>32</span></li>
+										<li>Autres formes personnelles. <span>33</span></li>
+									</ol>
+								</li>
+								<li>Chap. III. Adjectifs et pronoms possessifs. <span>36–42</span>
+									<ol>
+										<li>Adjectifs possessifs. <span>36</span></li>
+										<li>Pronoms possessifs. <span>39</span></li>
+									</ol>
+								</li>
+								<li>Chap. IV. Adjectifs et pronoms démonstratifs. <span>42–45</span>
+									<ol>
+										<li>Pour les objets rapprochés. <span>42</span></li>
+										<li>Pour les objets éloignés. <span>43</span></li>
+										<li>Pronom relatif. <span>44</span></li>
+									</ol>
+								</li>
+								<li>Chap. V.
+									<ol>
+										<li>Pronoms interrogatifs. <span>45–47</span></li>
+										<li>Pronoms indéfinis. <span>47–51</span></li>
+									</ol>
+								</li>
+							</ul>
+						</li>
+						<li>Nom.
+							<ul>
+								<li>Chap. VI. Formation, genre et nombre des noms. <span>52–65</span>
+									<ol>
+										<li>Formation et genre. <span>52–61</span>
+											<ol>
+												<li>Noms primitifs. <span>52</span></li>
+												<li>Noms dérivés. <span>53</span></li>
+												<li>Noms composés. <span>54</span></li>
+											</ol>
+										</li>
+										<li>Pluriel des noms. <span>61–65</span>
+											<ol>
+												<li>Pluriels masculins. <span>61</span></li>
+												<li>Pluriels féminins. <span>63</span></li>
+											</ol>
+										</li>
+									</ol>
+								</li>
+								<li>Chap. VII. Relations des noms entr'eux. <span>65–69</span>
+									<ol>
+										<li>Apposition. <span>65</span></li>
+										<li>Annexion. <span>67</span></li>
+									</ol>
+								</li>
+								<li>Chap. VIII. Des adjectifs en particulier. <span>69–74</span>
+									<ol>
+										<li>Formation. <span>69</span></li>
+										<li>Place de l'adjectif. <span>71</span></li>
+										<li>Accord de l'adjectif. <span>72</span></li>
+										<li>La comparaison. <span>73–74</span>
+											<ol>
+												<li>Comparatif. <span>73</span></li>
+												<li>Superlatif. <span>74</span></li>
+											</ol>
+										</li>
+									</ol>
+								</li>
+								<li>Chap. IX. De la numération. <span>74–82</span>
+									<ol>
+										<li>Les nombres. <span>74–80</span>
+											<ol>
+												<li>Nombres cardinaux. <span>75</span></li>
+												<li>Nombres distributifs. <span>78</span></li>
+												<li>Nombres ordinaux. <span>78</span></li>
+												<li>Nombres fractionnaires. <span>79</span></li>
+											</ol>
+										</li>
+										<li>Notation du temps. <span>80–82</span></li>
+									</ol>
+								</li>
+							</ul>
+						</li>
+						<li>Verbe.
+							<ul>
+								<li>Chap. X. Des verbes en eux-mêmes. <span>83</span>
+									
+								</li>
+							</ul>
+						</li>
+					</ol>
+				</li>
+			</ol>
 		</div>
 	</body>
 </html>
